--- a/Magi/bunitinho.css
+++ b/Magi/bunitinho.css
@@ -4,7 +4,7 @@
 }
 
 .cabecalho{
-background-color: #424e61;
+background-color: #0e78b6;
 display: flex;
 padding: 20px 10px;
 justify-content: space-around;
@@ -20,7 +20,7 @@ align-items: center;
     margin: 0 16px;
 }
 .primeira-parte{
-    background-image: linear-gradient(#424e61,#b91ba4);
+    background-image: linear-gradient(#0e78b6,purple);
     height: 500px;
     color: whitesmoke;
     padding-top: 100px;
