--- a/Eve/bunito.css
+++ b/Eve/bunito.css
@@ -51,8 +51,12 @@ align-items: center;
     width: 35%;
 }
 .anime{
-    width: 25%;
+    width: 10%;
 }
 .icone{
     width: 10%;
 }
+.estudante-todos{
+
+}
+
