--- a/Eve/bunito.css
+++ b/Eve/bunito.css
@@ -51,12 +51,13 @@ align-items: center;
     width: 35%;
 }
 .anime{
-    width: 10%;
+    width: 300px;
 }
 .icone{
-    width: 10%;
+    width: 30px;
 }
 .estudante-todos{
 
 }
+
 
