--- a/Eve/style.css
+++ b/Eve/style.css
@@ -1,7 +1,7 @@
-h1{background-color: aquamarine;
+h1{background-color: rgba(125, 35, 228, 0.329);
 color: blueviolet;
 }
-h2{color: rgb(165, 112, 214);
+h2{color: rgb(123, 52, 189);
 }
 h3{color: chocolate;
 
